--- a/ng_implmentation/package.json
+++ b/ng_implmentation/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "@types/arcgis-js-api": "^4.6.0",
+    "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "esri-loader": "^2.0.0",
     "rxjs": "^5.5.2",
