--- a/samples/2_more_app_scaffolding/package.json
+++ b/samples/2_more_app_scaffolding/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@types/arcgis-js-api": "^4.6.0",
     "core-js": "^2.4.1",
+    "esri-loader": "^2.2.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
