--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
-    "@types/arcgis-js-api": "^4.6.0",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "esri-loader": "^2.2.0",
@@ -30,9 +29,10 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.0",
+    "@angular/cli": "^1.6.8",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
+    "@types/arcgis-js-api": "^4.6.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
