--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.2.0",
     "@types/arcgis-js-api": "^4.6.0",
     "core-js": "^2.4.1",
+    "esri-loader": "^2.2.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
