--- a/sample_apps/1-app-scaffolding/src/tsconfig.app.json
+++ b/sample_apps/1-app-scaffolding/src/tsconfig.app.json
@@ -4,7 +4,7 @@
     "outDir": "../out-tsc/app",
     "baseUrl": "./",
     "module": "es2015",
-    "types": ["arcgis-js-api"]
+    "types": []
   },
   "exclude": [
     "test.ts",
