--- a/sample_apps/1-app-scaffolding/src/tsconfig.spec.json
+++ b/sample_apps/1-app-scaffolding/src/tsconfig.spec.json
@@ -6,8 +6,7 @@
     "module": "commonjs",
     "types": [
       "jasmine",
-      "node",
-      "arcgis-js-api"
+      "node"
     ]
   },
   "files": [
